use crate::boolean_boundary_tests::BooleanLogicTestStruct;
use crate::proto;
use proptest::prelude::*;

proptest! {
    /// Test boolean logic boundaries with random combinations
    #[test]
    fn prop_test_boolean_logic_combinations(
        has_expect in any::<bool>(),
        has_default in any::<bool>(),
        has_explicit_optional in any::<bool>(),
        field_value in prop::option::of(".*")
    ) {
        // Create test scenarios that cover all boolean combinations
        // This tests mutations in has_explicit_optional_usage_indicators and similar functions

        // Skip impossible combinations that would cause compilation errors
        if has_expect && has_default && !has_explicit_optional {
            return Ok(());
        }

        // Test the combination with a simple message
        let proto_msg = proto::CombinationMessage {
            rename_with_default: field_value.clone(),
            transparent_with_expect: field_value.clone(),
            enum_with_default_and_optional: Some(proto::Status::Ok.into()),
            collection_with_expect: vec![proto::Track { track_id: 1 }],
        };

        // The exact struct would depend on the combination, but this tests the boolean logic
        let result: Result<BooleanLogicTestStruct, _> = proto_msg.try_into();

        // Verify the result makes sense given the boolean combination
        match (has_expect, has_default) {
            (true, false) => {
                // Expect-only should either succeed or error appropriately
                prop_assert!(result.is_ok() || result.is_err());
            },
            (false, true) => {
                // Default-only should succeed using default values
                prop_assert!(result.is_ok());
            },
            (true, true) => {
                // Both expect and default - expect should take precedence
                prop_assert!(result.is_ok() || result.is_err());
            },
            (false, false) => {
                // Neither - should use normal conversion logic
                prop_assert!(result.is_ok() || result.is_err());
            },
        }
    }

    /// Test type detection boundary conditions
    #[test]
    fn prop_test_type_detection_boundaries(
        is_primitive in any::<bool>(),
        is_std_type in any::<bool>(),
        is_proto_type in any::<bool>(),
        segments_len in 1..5usize
    ) {
        // This would test the complex boolean logic in is_custom_type_without_optional_indicators
        // The actual test would need to construct types that match these properties

        let is_custom = !is_primitive && !is_std_type && !is_proto_type && segments_len == 1;

        // Verify the boolean logic matches expected behavior
        if is_custom {
            prop_assert!(!is_primitive);
            prop_assert!(!is_std_type);
            prop_assert!(!is_proto_type);
            prop_assert_eq!(segments_len, 1);
        }
    }

    /// Test error mode detection combinations
    #[test]
    fn prop_test_error_mode_combinations(
        has_from_proto_fn in any::<bool>(),
        has_to_proto_fn in any::<bool>(),
        is_primitive_type in any::<bool>(),
        is_option_type in any::<bool>()
    ) {
        // Test custom_functions_need_default_panic boolean logic
        let should_panic = has_from_proto_fn && has_to_proto_fn && !is_primitive_type && !is_option_type;

        // Verify the boolean combination logic
        if should_panic {
            prop_assert!(has_from_proto_fn);
            prop_assert!(has_to_proto_fn);
            prop_assert!(!is_primitive_type);
            prop_assert!(!is_option_type);
        }

        if !should_panic {
            prop_assert!(
                !has_from_proto_fn ||
                !has_to_proto_fn ||
                is_primitive_type ||
                is_option_type
            );
        }
    }

    /// Test collection vs option detection boundaries
    #[test]
    fn prop_test_collection_option_detection(
        is_vec in any::<bool>(),
        is_option in any::<bool>(),
        is_option_vec in any::<bool>(),
        vec_length in 0..10usize
    ) {
        // Test the boundary conditions in collection type detection
        let is_collection = is_vec || is_option_vec;
        let is_any_collection = is_collection || (is_option && is_vec);

        // Verify collection detection logic
        if is_any_collection {
            prop_assert!(is_vec || is_option_vec || (is_option && is_vec));
        }

        // Test empty vs non-empty collection handling
        if is_option_vec && vec_length == 0 {
            // Empty Option<Vec<T>> should become None
            prop_assert_eq!(vec_length, 0);
        }
    }

    /// Test strategy selection precedence
    #[test]
    fn prop_test_strategy_selection_precedence(
        has_ignore in any::<bool>(),
        has_custom in any::<bool>(),
        has_transparent in any::<bool>(),
        is_collection in any::<bool>(),
        has_default in any::<bool>()
    ) {
        // Test the sequential elimination logic in FieldConversionStrategy::from_field_info

        let strategy = if has_ignore {
            "Ignore"
        } else if has_custom {
            "Custom"
        } else if has_transparent {
            "Transparent"
        } else if is_collection {
            "Collection"
        } else if has_default {
            "Option"
        } else {
            "Direct"
        };

        // Verify precedence order is maintained
        match strategy {
            "Ignore" => prop_assert!(has_ignore),
            "Custom" => prop_assert!(!has_ignore && has_custom),
            "Transparent" => prop_assert!(!has_ignore && !has_custom && has_transparent),
            "Collection" => prop_assert!(!has_ignore && !has_custom && !has_transparent && is_collection),
            "Option" => prop_assert!(!has_ignore && !has_custom && !has_transparent && !is_collection && has_default),
            "Direct" => prop_assert!(!has_ignore && !has_custom && !has_transparent && !is_collection && !has_default),
            _ => prop_assert!(false, "Unknown strategy: {}", strategy),
        }
    }
}
